--- a/.env.example
+++ b/.env.example
@@ -32,4 +32,33 @@ DB_DATABASE=pizzeria_bambino
 DB_USERNAME=root
 DB_PASSWORD=
 
-# Otras configuraciones necesarias...
+# Configuración de correo para servidor local VirtualBox
+# =====================================================
+MAIL_MAILER=smtp
+MAIL_HOST=192.168.1.42
+MAIL_PORT=25
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS="pizzeria@tecnoweb.net"
+MAIL_FROM_NAME="Pizzería Bambino"
+
+# Configuraciones adicionales de Laravel
+LOG_CHANNEL=stack
+LOG_DEPRECATIONS_CHANNEL=null
+LOG_LEVEL=debug
+
+BROADCAST_DRIVER=log
+CACHE_DRIVER=file
+FILESYSTEM_DISK=local
+QUEUE_CONNECTION=sync
+SESSION_DRIVER=file
+SESSION_LIFETIME=120
+
+MEMCACHED_HOST=127.0.0.1
+
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
+
+# Configuraciones adicionales necesarias...
