Actualizacion del servidor de correo y pagos por paypal SOLUCIONADO

--- a/.env.example
+++ b/.env.example
@@ -1,46 +1,84 @@
-# Configuración PayPal LIVE - Pizzería Bambino
-# ==========================================
+# Configuración de aplicación Laravel
+APP_NAME="Pizzería Bambino"
+APP_ENV=production
+APP_KEY=base64:2v6wncYM0EumiKBGNEwbxj/WHmBnvC8PBb4+dHj8aAI=
+APP_DEBUG=false
+APP_URL=http://localhost
 
+LOG_CHANNEL=stack
+LOG_DEPRECATIONS_CHANNEL=null
+LOG_LEVEL=debug
+
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=pizza
+DB_USERNAME=root
+DB_PASSWORD=
+
+BROADCAST_DRIVER=log
+CACHE_DRIVER=file
+FILESYSTEM_DISK=local
+QUEUE_CONNECTION=sync
+SESSION_DRIVER=database
+SESSION_LIFETIME=120
+
+MEMCACHED_HOST=127.0.0.1
+
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
+
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
+AWS_USE_PATH_STYLE_ENDPOINT=false
+
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_HOST=
+PUSHER_PORT=443
+PUSHER_SCHEME=https
+PUSHER_APP_CLUSTER=mt1
+
+VITE_APP_NAME="${APP_NAME}"
+VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+VITE_PUSHER_HOST="${PUSHER_HOST}"
+VITE_PUSHER_PORT="${PUSHER_PORT}"
+VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
+VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+#PayPal API Mode
 # Modo PayPal: 'sandbox' para pruebas, 'live' para producción
 PAYPAL_MODE=live
 
 # Credenciales PayPal LIVE (Producción)
-PAYPAL_LIVE_CLIENT_ID=ATjnTX-sEDd3M3LL9XuapdLdMJ9irVhIth5vNHom_SSqf6E_YL2-1qwOg6_ne5leuYshBQbl_xVkIHglJ
-PAYPAL_LIVE_CLIENT_SECRET=EHbONuwYVjodbWlMZNW6mobX7ee640n5xdkuaLR0-P9rRK86IiYdXtJMbvk0V0hu_AuSiJwT3UB6-vAX
+PAYPAL_LIVE_CLIENT_ID=AWs_d8Szs9ULzCoKm4jN0DuBSOylc5zxMrM41Nz-V3R4OVxZrnq5ccLaIR-BePjI7gkH_23jctOYFiUA
+PAYPAL_LIVE_CLIENT_SECRET=EAN1bCZCIcGJm6ZhswdoMQEXV6fkvff-1luY2lbjooCr_8DafXQMHS03PIV0SrroSLBfv0Y2Fdatmyud
 
 # Credenciales PayPal SANDBOX (Pruebas) - mantener para testing
-PAYPAL_SANDBOX_CLIENT_ID=sandbox_client_id_here
-PAYPAL_SANDBOX_CLIENT_SECRET=sandbox_client_secret_here
+#PAYPAL_SANDBOX_CLIENT_ID=sandbox_client_id_here
+#PAYPAL_SANDBOX_CLIENT_SECRET=sandbox_client_secret_here
 
 # Configuración adicional PayPal
 PAYPAL_CURRENCY=USD
 PAYPAL_PAYMENT_ACTION=Sale
 PAYPAL_VALIDATE_SSL=true
 
-# Configuración de aplicación Laravel
-APP_NAME="Pizzería Bambino"
-APP_ENV=production
-APP_KEY=
-APP_DEBUG=false
-APP_URL=http://localhost
-
-# Base de datos
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=pizzeria_bambino
-DB_USERNAME=root
-DB_PASSWORD=
-
 # Configuración de correo para servidor local VirtualBox
 # =====================================================
+# Configuración de correo CORREGIDA
 MAIL_MAILER=smtp
-MAIL_HOST=192.168.1.42
+MAIL_HOST=192.168.1.17
 MAIL_PORT=25
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=david@correo.tecnoweb.net
+MAIL_PASSWORD=12345
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="pizzeria@tecnoweb.net"
+MAIL_FROM_ADDRESS="david@correo.tecnoweb.net"
 MAIL_FROM_NAME="Pizzería Bambino"
 
 # Configuraciones adicionales de Laravel
@@ -61,4 +99,48 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-# Configuraciones adicionales necesarias...
+####PARAMETROS
+
+//const rutaApiRest = "http://localhost/terracita/public/api/v1/";
+//const rutaLocal = "http://localhost/terracita/public/";
+
+// Para php artisan serve
+const rutaApiRest = "http://127.0.0.1:8000/api/v1/";
+const rutaLocal = "http://127.0.0.1:8000/";
+
+let spinner;
+
+function validar(campo) {
+    if (!campo.val()) {
+        campo.addClass("validarIncorrecto");
+        return false;
+    } else {
+        campo.removeClass("validarIncorrecto");
+        return true;
+    }
+}
+
+function validarSelect(campo) {
+    var selectedValues = campo.val();
+    if (selectedValues == "" || selectedValues.length === 0) {
+        campo.addClass("validarIncorrecto");
+        return false;
+    } else {
+        campo.removeClass("validarIncorrecto");
+        return true;
+    }
+}
+
+function showLoader() {
+    const target = document.getElementById('loader-container');
+    spinner = new Spinner().spin(target);
+}
+
+function hideLoader() {
+    if (spinner) {
+        spinner.stop();
+    }
+}
+
+
+#PUBLIC/PIZZERIA/JS/PARAMETROS.JS
